HW2_base InMemoryUserRepository implemented